<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/search_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/activity"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/preferences"
            android:title="@string/menu_preferences" />
    </group>
</menu>