<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alphadrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.alphadrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.alphadrawer.ui.profile.profileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.example.alphadrawer.ui.preferences.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.alphadrawer.ui.maps.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
</navigation>