<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="settingsAction"/>
    <item
        android:id="@+id/action_userLogout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:onClick="logOutAction"/>

    <item
        android:id="@+id/action_guestSignIn"
        android:orderInCategory="100"
        android:title="@string/action_guestSignIn"
        app:showAsAction="never"
        android:onClick="guestLogInAction"/>
</menu>