<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/profile_personal_info_header"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/valueNotSet"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_label" />

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/ProfileEmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center|start"
        android:text="@string/ProfileName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/valueNotSet"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_label" />

    <EditText
        android:id="@+id/profile_age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/valueNotSet"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_age_label" />

    <TextView
        android:id="@+id/profile_age_label"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center|start"
        android:text="@string/ProfileAge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_address"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/valueNotSet"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_address_label" />

    <TextView
        android:id="@+id/profile_address_label"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/ProfileAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <EditText
        android:id="@+id/profile_gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/valueNotSet"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_gender_label" />

    <TextView
        android:id="@+id/profile_gender_label"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/ProfileGender"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_age" />

    <Button
        android:id="@+id/profile_submit_button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/prefButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_address" />


</androidx.constraintlayout.widget.ConstraintLayout>